[project]
name = "todowrite"
version = "0.1.0"
description = "Programmatic todo list management"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.0",
    "pydantic>=2.12.0",
]

[project.scripts]
todowrite = "todowrite_manager.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=8.4.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todowrite_manager"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
